[package]
name = "pandocs-preproc"
version = "0.1.0"
authors = ["ISSOtm <eldredhabert0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
mdbook = "0.4.8"
pulldown-cmark = "0.8.0"
pulldown-cmark-to-cmark = "6.0.0"
termcolor = "1.1.2"
serde_json = "1.0.59"
