[package]
name = "pandocs-renderer"
version = "0.1.0"
authors = ["ISSOtm <eldredhabert0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
mdbook = "0.4.8"
regex = "1.5"
termcolor = "1.1.2"
